--- a/apps.json
+++ b/apps.json
@@ -9,5 +9,16 @@
    "imageUrl":"https://ttimg.vercel.app/penpot.png",
    "developer":"itroeix",
    "shared":"itroeix" 
+  },
+  {
+   "id":2,
+   "category":"api",
+   "name":"Test 2",
+   "lower":"test 2",
+   "description":"test description 2",
+   "webUrl":"https://itroeix.xyz/",
+   "imageUrl":"https://ttimg.vercel.app/penpot.png",
+   "developer":"itroeix",
+   "shared":"itroeix" 
   }
 ]
