--- a/apps.json
+++ b/apps.json
@@ -2,9 +2,9 @@
   {
    "id":1,
    "category":"test",
-   "name":"Lorem ipsum",
-   "lower":"lorem ipsum",
-   "description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem integer vitae justo eget magna.",
+   "name":"Test",
+   "lower":"test",
+   "description":"test description",
    "webUrl":"https://itroeix.xyz/",
    "imageUrl":"https://ttimg.vercel.app/penpot.png",
    "developer":"itroeix",
@@ -15,7 +15,7 @@
    "category":"api",
    "name":"Test 2",
    "lower":"test 2",
-   "description":"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem integer vitae justo eget magna. 2",
+   "description":"test description 2",
    "webUrl":"https://itroeix.xyz/",
    "imageUrl":"https://ttimg.vercel.app/penpot.png",
    "developer":"itroeix",
